Fixed chrome border line https://stackoverflow.com/questions/61992025/google-chrome-showing-black-border-on-focus-state-for-button-user-agent-styles

--- a/upload/catalog/view/stylesheet/stylesheet.scss
+++ b/upload/catalog/view/stylesheet/stylesheet.scss
@@ -44,9 +44,14 @@ a {
   }
 }
 
+/* Chrome border line */
+button:focus {
+  outline: none !important;
+}
+
 legend {
   font-size: 18px;
-  padding: 7px 0px;
+  padding: 7px 0;
   margin-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -258,7 +263,7 @@ div.required .col-form-label:before {
 
   .dropdown-menu {
     padding-bottom: 0;
-    margin-top: 0px;
+    margin-top: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
@@ -859,7 +864,7 @@ footer {
 
         + div {
           //display: inline-block;
-          margin-left: 0%;
+          margin-left: 0;
           //width: 69.5%;
         }
       }
